@@ -40,6 +40,7 @@
             "Dist::Zilla::Plugin::CheckMetaResources" : "0",
             "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0",
             "Dist::Zilla::Plugin::CheckSelfDependency" : "0",
+            "Dist::Zilla::Plugin::CheckStrictVersion" : "0",
             "Dist::Zilla::Plugin::ConfirmRelease" : "0",
             "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
             "Dist::Zilla::Plugin::CopyFilesFromRelease" : "0",
@@ -410,6 +411,11 @@
             },
             "name" : "@Author::SKIRMESS/CheckSelfDependency",
             "version" : "0.011"
+         },
+         {
+            "class" : "Dist::Zilla::Plugin::CheckStrictVersion",
+            "name" : "@Author::SKIRMESS/CheckStrictVersion",
+            "version" : "0.001"
          },
          {
             "class" : "Dist::Zilla::Plugin::RunExtraTests",
