@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+        - Added CheckStrictVersion plugin
         - Added copyright_holder to dist.ini
         - Fixed a display issue in the POD
         - Added MetaConfig plugin
